[package]
name = "demo-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
bitbuffer = "0.11.1"
main_error = "0.1.2"
tf-demo-parser = { version = "0.5", git = "https://github.com/demostf/parser" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
native-dialog = "0.9.0"
steamlocate = "2.0.1"
